--- a/src/_blocks/header/header.scss
+++ b/src/_blocks/header/header.scss
@@ -1,3 +1,46 @@
 .header {
+  width: 1170px;
+  margin: 0 auto;
 
+  font-family: $font-main;
+  font-size: 18px;
+  line-height: 19px;
+  font-weight: normal;
+  color: red;
+
+  display: flex;
+  justify-content: space-between;
+  background-color: antiquewhite;
+}
+
+.header__logo {
+  background-color: blueviolet;
+  display: flex;
+  align-items: flex-end;
+}
+
+.header__logo-title {
+  text-transform: uppercase;
+}
+
+.header__menu {
+  background-color: brown;
+  display: flex;
+  align-items: center;
+}
+
+.header__menu-nav {
+  display: flex;
+  list-style: none;
+  margin: 0;
+    & .header__menu-item:not(:last-child) {
+      margin-right: 70px;
+    }
+}
+
+.header__menu-item {
+  & a {
+    text-decoration: none;
+    color: #ffffff;
+  }
 }
