--- a/src/fonts/font.scss
+++ b/src/fonts/font.scss
@@ -1,9 +1,67 @@
 @font-face {
-  font-family: "???";
+  font-family: "Open Sans";
   font-weight: 400;
-  font-display: swap;
 
-  src: url(fonts/????/????.woff2) format("woff2"),
-       url(fonts/????/????.woff) format("woff");
+  src: url(fonts/opensans/opensans-regular.woff2) format("woff2"),
+       url(fonts/opensans/opensans-regular.woff) format("woff");
 }
 
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 300;
+
+  src: url(fonts/opensans/opensans-lightItalic.woff2) format("woff2"),
+       url(fonts/opensans/opensans-lightItalic.woff) format("woff");
+}
+
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 300;
+
+  src: url(fonts/opensans/opensans-light.woff2) format("woff2"),
+       url(fonts/opensans/opensans-light.woff) format("woff");
+}
+
+//............................................................
+
+@font-face {
+  font-family: "Lato";
+  font-weight: 900;
+
+  src: url(fonts/lato/lato-black.woff2) format("woff2"),
+       url(fonts/lato/lato-black.woff) format("woff");
+}
+
+@font-face {
+  font-family: "Lato";
+  font-weight: 700;
+
+  src: url(fonts/lato/lato-bold.woff2) format("woff2"),
+       url(fonts/lato/lato-bold.woff) format("woff");
+}
+
+@font-face {
+  font-family: "Lato";
+  font-weight: 400;
+
+  src: url(fonts/lato/lato-regular.woff2) format("woff2"),
+       url(fonts/lato/lato-regular.woff) format("woff");
+}
+
+//............................................................
+
+@font-face {
+  font-family: "Bebas Neue";
+  font-weight: 400;
+
+  src: url(fonts/bebas_neue/bebas_neue_regular.woff2) format("woff2"),
+       url(fonts/bebas_neue/bebas_neue_regular.woff) format("woff");
+}
+
+@font-face {
+  font-family: "Bebas Neue";
+  font-weight: 400;
+
+  src: url(fonts/bebas_neue/bebas_neue_book.woff2) format("woff2"),
+       url(fonts/bebas_neue/bebas_neue_book.woff) format("woff");
+}
