--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,7 +2,6 @@ $col: #000;
 
 $bg: #fff;
 
-$font-main: BlinkMacSystemFont, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-$font-second: Cambria, Georgia, "Times New Roman", Times, serif;
-
-
+$font-main: "Open Sans", "Arial", sans-serif;
+$font-second: "lato", "Times New Roman", Times, serif;
+$font-third: "Bebas Neue";
