--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,5 +3,6 @@ $col: #000;
 $bg: #fff;
 
 $font-main: "Open Sans", "Arial", sans-serif;
-$font-second: "lato", "Times New Roman", Times, serif;
+$font-second: "Lato";
 $font-third: "Bebas Neue";
+
