--- a/src/fonts/font.scss
+++ b/src/fonts/font.scss
@@ -1,25 +1,22 @@
 @font-face {
   font-family: "Open Sans";
   font-weight: 400;
-
-  src: url(fonts/opensans/opensans-regular.woff2) format("woff2"),
-       url(fonts/opensans/opensans-regular.woff) format("woff");
+  src: url(../fonts/opensans/opensans-regular.woff2) format("woff2"),
+       url(../fonts/opensans/opensans-regular.woff) format("woff");
 }
 
 @font-face {
   font-family: "Open Sans";
   font-weight: 300;
-
-  src: url(fonts/opensans/opensans-lightItalic.woff2) format("woff2"),
-       url(fonts/opensans/opensans-lightItalic.woff) format("woff");
+  src: url(../fonts/opensans/opensans-lightItalic.woff2) format("woff2"),
+       url(../fonts/opensans/opensans-lightItalic.woff) format("woff");
 }
 
 @font-face {
   font-family: "Open Sans";
   font-weight: 300;
-
-  src: url(fonts/opensans/opensans-light.woff2) format("woff2"),
-       url(fonts/opensans/opensans-light.woff) format("woff");
+  src: url(../fonts/opensans/opensans-light.woff2) format("woff2"),
+       url(../fonts/opensans/opensans-light.woff) format("woff");
 }
 
 //............................................................
@@ -27,25 +24,22 @@
 @font-face {
   font-family: "Lato";
   font-weight: 900;
-
-  src: url(fonts/lato/lato-black.woff2) format("woff2"),
-       url(fonts/lato/lato-black.woff) format("woff");
+  src: url(../fonts/lato/lato-black.woff2) format("woff2"),
+       url(../fonts/lato/lato-black.woff) format("woff");
 }
 
 @font-face {
   font-family: "Lato";
   font-weight: 700;
-
-  src: url(fonts/lato/lato-bold.woff2) format("woff2"),
-       url(fonts/lato/lato-bold.woff) format("woff");
+  src: url(../fonts/lato/lato-bold.woff2) format("woff2"),
+       url(../fonts/lato/lato-bold.woff) format("woff");
 }
 
 @font-face {
   font-family: "Lato";
   font-weight: 400;
-
-  src: url(fonts/lato/lato-regular.woff2) format("woff2"),
-       url(fonts/lato/lato-regular.woff) format("woff");
+  src: url(../fonts/lato/lato-regular.woff2) format("woff2"),
+       url(../fonts/lato/lato-regular.woff) format("woff");
 }
 
 //............................................................
@@ -53,15 +47,13 @@
 @font-face {
   font-family: "Bebas Neue";
   font-weight: 400;
-
-  src: url(fonts/bebas_neue/bebas_neue_regular.woff2) format("woff2"),
-       url(fonts/bebas_neue/bebas_neue_regular.woff) format("woff");
+  src: url(../fonts/bebas_neue/bebas_neue_regular.woff2) format("woff2"),
+       url(../fonts/bebas_neue/bebas_neue_regular.woff) format("woff");
 }
 
 @font-face {
   font-family: "Bebas Neue";
   font-weight: 400;
-
-  src: url(fonts/bebas_neue/bebas_neue_book.woff2) format("woff2"),
-       url(fonts/bebas_neue/bebas_neue_book.woff) format("woff");
+  src: url(../fonts/bebas_neue/bebas_neue_book.woff2) format("woff2"),
+       url(../fonts/bebas_neue/bebas_neue_book.woff) format("woff");
 }
