--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,5 +13,6 @@
 @import "../_blocks/btn/btn.scss";
 @import "../_blocks/header/header.scss";
 @import "../_blocks/footer/footer.scss";
+@import "../_blocks/header_slider/header_slider.scss";
 
 
