--- a/src/scss/mixins/wrap.scss
+++ b/src/scss/mixins/wrap.scss
@@ -1,5 +1,10 @@
-@mixin wrap($max-width: 1200, $margin: 0 auto, $padding: 0 15px){
-  max-width: $max-width;
-  margin: $margin;
-  padding: $padding;
+// @mixin wrap($max-width: 1200, $margin: 0 auto, $padding: 0 15px){
+//   max-width: $max-width;
+//   margin: $margin;
+//   padding: $padding;
+// }
+
+@mixin wrap {
+  max-width: 1170px;
+  margin: 0 auto;
 }
