--- a/src/_blocks/header/header.scss
+++ b/src/_blocks/header/header.scss
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: space-between;
   background-color: transparent;
-
+  margin-top: 21px;
 }
 
 .header__logo {
@@ -36,6 +36,7 @@
   line-height: 0.9;
   font-weight: 400;
   margin: 0;
+  margin-top: 10px;
 }
 
 .header__menu {
