--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,9 @@
 
 @import "../_blocks/btn/btn.scss";
 @import "../_blocks/header/header.scss";
+@import "../_blocks/promo_slider/promo_slider.scss";
+@import "../_blocks/products/products.scss";
+@import "../_blocks/trending/trending.scss";
+@import "../_blocks/blog/blog.scss";
+@import "../_blocks/subscribe/subscribe.scss";
 @import "../_blocks/footer/footer.scss";
-@import "../_blocks/header_slider/header_slider.scss";
-
-
