add block  products

--- a/src/fonts/font.scss
+++ b/src/fonts/font.scss
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: "Open Sans";
-  font-weight: 300;
+  font-style: italic;
   src: url(../fonts/opensans/opensans-lightItalic.woff2) format("woff2"),
        url(../fonts/opensans/opensans-lightItalic.woff) format("woff");
 }
