--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,7 @@
 @import "variables.scss";
 
 @import "mixins/mediaquery.scss";
-@import "mixins/title.scss";
+@import "mixins/any_mixins.scss";
 @import "mixins/wrap.scss";
 @import "mixins/visually-hidden.scss";
 
