--- a/src/_blocks/products/products.scss
+++ b/src/_blocks/products/products.scss
@@ -12,25 +12,11 @@
   position: relative;
   margin: 0;
   &::before {
-    content: "";
-    background-color: rgb(220, 0, 0);
-    position: absolute;
-    width: 113px;
-    height: 3px;
-    top: -32px;
-    left: 50%;
-    transform: translateX(-50%);
+    @include redline-top;
   }
 
   &::after {
-    content: "";
-    background-color: rgb(220, 0, 0);
-    position: absolute;
-    width: 113px;
-    height: 3px;
-    top: 62px;
-    left: 50%;
-    transform: translateX(-50%);
+    @include redline-bottom;
   }
 }
 
@@ -58,7 +44,6 @@
     width: 315px;
     height: 355px;
     border: 3px solid $bg;
-    z-index: 166;
   }
 
   &--men {
