--- a/src/_blocks/promo_slider/promo_slider.scss
+++ b/src/_blocks/promo_slider/promo_slider.scss
@@ -2,7 +2,7 @@
   height: 100vh;
   width: 100%;
   margin: 0 auto;
-  background: url(../../img/promo_slider/main_slider.png) no-repeat center;
+  background: url(/img/promo_slider/main_slider.png) no-repeat center;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -71,19 +71,6 @@
 }
 
 .promo-slider__button-item {
-  outline: 0;
-  padding: 0;
-  margin: 0 5px;
-  width: 12px;
-  height: 12px;
-  background-color: $bg;
-  border-radius: 50%;
-  box-sizing: border-box;
-
-    &:active {
-      background-color: transparent;
-      border: 2px solid $bg;
-      box-sizing: content-box;
-      margin: 0 3px;
-    }
+  @include slider-button;
 }
+
