--- a/src/fonts/font.scss
+++ b/src/fonts/font.scss
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "Open Sans";
-  font-weight: 400;
-  src: url(../fonts/opensans/opensans-regular.woff2) format("woff2"),
-       url(../fonts/opensans/opensans-regular.woff) format("woff");
+  font-weight: 300;
+  src: url(../fonts/opensans/opensans-light.woff2) format("woff2"),
+       url(../fonts/opensans/opensans-light.woff) format("woff");
 }
 
 @font-face {
@@ -14,9 +14,16 @@
 
 @font-face {
   font-family: "Open Sans";
-  font-weight: 300;
-  src: url(../fonts/opensans/opensans-light.woff2) format("woff2"),
-       url(../fonts/opensans/opensans-light.woff) format("woff");
+  font-weight: 400;
+  src: url(../fonts/opensans/opensans-regular.woff2) format("woff2"),
+       url(../fonts/opensans/opensans-regular.woff) format("woff");
+}
+
+@font-face {
+  font-family: "Open Sans";
+  font-weight: 700;
+  src: url(../fonts/opensans/opensans-bold.woff2) format("woff2"),
+       url(../fonts/opensans/opensans-bold.woff) format("woff");
 }
 
 //............................................................
