--- a/src/_blocks/products/products.scss
+++ b/src/_blocks/products/products.scss
@@ -6,7 +6,7 @@
 }
 
 .products__title {
-  color: rgb(51, 51, 51);
+  color: $dark;
   line-height: 0.8;
   text-align: center;
   position: relative;
@@ -77,7 +77,6 @@
 .products__list-sentence {
   width: 570px;
   height: 418px;
-  background-color: salmon;
   display: flex;
   align-items: center;
   text-align: center;
@@ -112,7 +111,7 @@
   &::before {
     content: "";
     position: absolute;
-    background-color: rgb(255, 255, 255);
+    background-color: $bg;
     width: 192px;
     height: 1px;
     left: 50%;
@@ -123,7 +122,7 @@
   &::after {
     content: "";
     position: absolute;
-    background-color: rgb(255, 255, 255);
+    background-color: $bg;
     width: 192px;
     height: 1px;
     left: 50%;
