add content for block 'blog'.

--- a/src/_blocks/promo_slider/promo_slider.scss
+++ b/src/_blocks/promo_slider/promo_slider.scss
@@ -67,10 +67,11 @@
 }
 
 .promo-slider__button {
-  margin-bottom: 100px;
+  margin-bottom: 56px;
 }
 
 .promo-slider__button-item {
   @include slider-button;
+  margin: 0 3px;
 }
 
