--- a/src/_blocks/products/products.scss
+++ b/src/_blocks/products/products.scss
@@ -12,11 +12,12 @@
   position: relative;
   margin: 0;
   &::before {
-    @include redline-top;
+    @include redline;
   }
 
   &::after {
-    @include redline-bottom;
+    @include redline;
+    top: 63px;
   }
 }
 
