block trending - created one element

--- a/src/_blocks/trending/trending.scss
+++ b/src/_blocks/trending/trending.scss
@@ -65,6 +65,17 @@
 
   &--subtitle {
     margin-top: 18px;
+    position: relative;
+
+    &:after {
+      position: absolute;
+      content: "";
+      background-color: rgb(0, 0, 0);
+      width: 30px;
+      height: 1px;
+      left: 0;
+      bottom: -25px;
+    }
   }
 
   &--text {
