--- a/src/_blocks/header/header.scss
+++ b/src/_blocks/header/header.scss
@@ -68,3 +68,131 @@
     color: #660909;;
   }
 }
+
+.header-burger {
+  display: none;
+}
+
+//.....................................................
+
+@media (max-width: $mobile) {
+
+  .header {
+    display: none;
+  }
+
+  .header-wrapper {
+    position: relative;
+  }
+
+  .header-burger {
+    background-color: rgb(204, 115, 99);
+    padding: 0 10px;
+    width: 320px;
+    margin: 0 auto;
+    display: block;
+  }
+
+  .header-burger__logo-wrapper {
+    padding-top: 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .burger-menu {
+    margin: 0;
+    padding: 0;
+    margin-top: 30px;
+
+    &__button {
+      display: block;
+      text-align: center;
+      list-style: none;
+      border: 1px solid $bg;
+      padding: 10px 0;
+      margin: 5px 0;
+    }
+
+    &__item {
+      font-family: "Open Sans";
+      font-size: 18px;
+      text-decoration: none;
+      color: $bg;
+    }
+
+  }
+
+  .header-burger__logo {
+    display: flex;
+    color: $red;
+    font-family: "Bebas Neue";
+    font-size: 20px;
+
+    &-title {
+      margin: 0;
+    }
+
+    &-text {
+      margin: 0;
+      font-size: 15px;
+      margin-top: 8px;
+    }
+  }
+
+  .active {
+    display: none;
+  }
+
+  //.................................................................
+  // Эффект кнопки бургер
+  #header-menuToggle {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+  }
+
+  #header-menuToggle input {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    cursor: pointer;
+    opacity: 0; /* hide input */
+    z-index: 1; /* top of the menu */
+  }
+
+  #header-menuToggle span{
+    width: 35px;
+    height: 4px;
+    margin-bottom: 5px;
+    background: $red;
+    border-radius: 4px;
+    transition: all 0.6s cubic-bezier(.08,.81,.87,.71);
+  }
+
+  #header-span1 {
+    transform-origin: 4px 0px;
+  }
+
+  #header-span3 {
+    transform-origin: bottom right;
+  }
+
+  #header-menuToggle input:checked ~ #header-span1 {
+    background-color: #0c2461;
+    transform: rotate(45deg) translate(4px);
+  }
+  #header-menuToggle input:checked ~ #header-span2 {
+    background-color: #0c2461;
+    transform: rotate(496deg) translate(4px);
+  }
+  #header-menuToggle input:checked ~ #header-span3 {
+    background-color: #0c2461;
+    transform: rotate(45deg);
+    opacity: 0;
+  }
+
+}
+
+
+
