--- a/src/_blocks/header/header.scss
+++ b/src/_blocks/header/header.scss
@@ -1,20 +1,23 @@
-.header-wrapper {
+.header {
   position: absolute;
   width: 100%;
+  left: 0;
+  top: 0;
+  margin-top: 21px;
 }
 
-.header {
+.header-wrapper {
   @include wrap;
-
   font-family: $font-main;
   font-size: 18px;
   line-height: 19px;
-  font-weight: medium;
+  font-weight: normal;
 
   display: flex;
   justify-content: space-between;
-  background-color: transparent;
-  margin-top: 21px;
+  width: 100%;
+  left: 0;
+  top: 0;
 }
 
 .header__logo {
@@ -22,6 +25,7 @@
   display: flex;
   align-items: center;
   color: $red;
+  align-items: baseline;
 }
 
 .header__logo-title {
@@ -36,18 +40,20 @@
   line-height: 0.9;
   font-weight: 400;
   margin: 0;
-  margin-top: 10px;
 }
 
 .header__menu {
   display: flex;
+  width: 690px;
   align-items: center;
 }
 
 .header__menu-nav {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   margin: 0;
+  padding: 0;
 }
 
 .header__menu-item:not(:last-child) {
@@ -55,6 +61,7 @@
 }
 
 .header__menu-item {
+  text-align: center;
   a {
     text-decoration: none;
     color: #ffffff;
@@ -72,6 +79,7 @@
 .header-burger {
   display: none;
 }
+
 
 //.....................................................
 
@@ -167,7 +175,7 @@
     margin-bottom: 5px;
     background: $red;
     border-radius: 4px;
-    transition: all 0.6s cubic-bezier(.08,.81,.87,.71);
+    transition: all 0.4s cubic-bezier(.08,.81,.87,.71);
   }
 
   #header-span1 {
@@ -179,15 +187,15 @@
   }
 
   #header-menuToggle input:checked ~ #header-span1 {
-    background-color: #0c2461;
+    background-color: $dark;
     transform: rotate(45deg) translate(4px);
   }
   #header-menuToggle input:checked ~ #header-span2 {
-    background-color: #0c2461;
+    background-color: $dark;
     transform: rotate(496deg) translate(4px);
   }
   #header-menuToggle input:checked ~ #header-span3 {
-    background-color: #0c2461;
+    background-color: $dark;
     transform: rotate(45deg);
     opacity: 0;
   }
