--- a/src/_blocks/products/products.scss
+++ b/src/_blocks/products/products.scss
@@ -1,33 +1,39 @@
 .products {
   @include wrap;
   @include opensans;
-  margin-top: 91px;
+  margin-top: 64px;
   margin-bottom: 60px;
 }
 
 .products__title {
   color: $dark;
-  line-height: 0.8;
   text-align: center;
   position: relative;
+  line-height: 1;
   margin: 0;
+  padding: 27px 0;
   &::before {
     @include redline;
+    top: 0;
   }
 
   &::after {
     @include redline;
-    top: 63px;
+    bottom: 0;
   }
 }
 
 //................................................................
 
+.products__list {
+  margin-top: 61px;
+}
+
 .products__list-type {
   list-style: none;
   display: flex;
   justify-content: space-between;
-  margin: 92px 0 0;
+  margin: 0;
   padding: 0;
 }
 
@@ -42,9 +48,12 @@
   &::after {
     content: "";
     position: absolute;
-    width: 315px;
-    height: 355px;
+    width: 85%;
+    height: 85%;
     border: 3px solid $bg;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 30px;
   }
 
   &--men {
@@ -102,11 +111,11 @@
   position: relative;
 
   &--off {
-    padding: 0 150px;
+    padding: 12px 150px;
   }
 
   &--sale {
-    padding: 0 71px;
+    padding: 12px 50px;
   }
 
   &::before {
@@ -117,7 +126,7 @@
     height: 1px;
     left: 50%;
     transform: translateX(-50%);
-    top: -11px;
+    top: 0;
   }
 
   &::after {
@@ -128,6 +137,6 @@
     height: 1px;
     left: 50%;
     transform: translateX(-50%);
-    bottom: -12px;
+    bottom: 0;
   }
 }
