--- a/src/_blocks/subscribe/subscribe.scss
+++ b/src/_blocks/subscribe/subscribe.scss
@@ -1,19 +1,9 @@
 .subscribe {
   font-family: "Open Sans";
-  width: 100%;
-  min-height: 250px;
   background: url(../../img/subscribe/subscribe.jpg) no-repeat top;
   background-size: cover;
   position: relative;
-
-  // &::before {
-  //   content: "";
-  //   position: absolute;
-  //   background-color: rgb(34, 37, 51);
-  //   opacity: 0.702;
-  //   width: 100%;
-  //   height: 250px;
-  // }
+  padding: 71px 0 80px 0;
 }
 
 .subscribe-wrapper {
@@ -27,15 +17,17 @@
   color: $bg;
   z-index: 131;
   font-weight: 300;
-  padding-top: 71px;
   margin: 0;
+}
+
+.subscribe-form {
+  margin-top: 24px;
 }
 
 .subscribe-form__email {
   width: 770px;
   background: transparent;
   border: 1px solid $bg;
-  margin-top: 28px;
   margin-right: 128px;
   padding: 16px 0;
   font-size: 13px;
