--- a/src/_blocks/trending/trending.scss
+++ b/src/_blocks/trending/trending.scss
@@ -1,33 +1,32 @@
 .trending {
-  min-height: 918px;
-  width: 100%;
   background: url(/img/trending/trending-background.jpg) no-repeat top;
+  padding: 1px 0 68px 0;
   background-size: cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 //................................................................
 
 .trending__wrapper {
   @include wrap;
-  margin-top: 92px;
+  margin-top: 60px;
 }
 
 .trending__title {
   @include opensans;
+  line-height: 1;
   text-align: center;
-  margin: 0 0 93px;
+  margin: 0;
   position: relative;
+  padding: 27px 0;
 
   &::before {
     @include redline;
+    top: 0;
   }
 
   &::after {
     @include redline;
-    top: 63px;
+    bottom: 0;
   }
 }
 
@@ -39,11 +38,20 @@
 
 .trending-slider {
   display: flex;
+  margin-top: 62px;
+
+  &__foto {
+    width: 50%;
+  }
+
+  &__block-info {
+    width: 50%;
+  }
 }
 
 .trending-slider__info {
   list-style: none;
-  margin: 0;
+  margin: 21px 0 0;
   padding: 0;
 }
 
@@ -54,37 +62,39 @@
   color: $red;
   line-height: 1.2;
   margin-top: 21px;
+  margin: 0;
 }
 
-.trending-slider__info-text {
-  font-size: 18px;
-  font-family: "Lato";
-  color: rgb(119, 119, 119);
-  line-height: 1.389;
-  letter-spacing: 0.1em;
+.trending-slider__info-collection {
+  @include trending-text;
+  margin-top: 17px;
+  position: relative;
+  padding-bottom: 25px;
 
-  &--subtitle {
-    margin-top: 18px;
-    position: relative;
-
-    &:after {
-      position: absolute;
-      content: "";
-      background-color: rgb(0, 0, 0);
-      width: 30px;
-      height: 1px;
-      left: 0;
-      bottom: -25px;
-    }
+  &::after {
+    position: absolute;
+    content: "";
+    background-color: rgb(0, 0, 0);
+    width: 30px;
+    height: 1px;
+    left: 0;
+    bottom: 0;
   }
+}
 
-  &--text {
-    margin-top: 47px;
-  }
+.trending-slider__info-description {
+  @include trending-text;
+  margin-top: 22px;
+}
 
-  &--tip {
-    margin-top: 25px;
-  }
+.trending-slider__info-advice {
+  @include trending-text;
+  margin-top: 26px;
+}
+
+.trending-slider__info-comment {
+  @include trending-text;
+  letter-spacing: 0.09em;
 }
 
 //................................................................
@@ -100,6 +110,7 @@
 
 .trending-slider__button-wrapper {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .trending-slider__button-type {
@@ -138,16 +149,15 @@
 
 .trending-slider__button-action {
   display: flex;
+  flex-wrap: wrap;
   margin-top: 30px;
 }
 
 //................................................................
 .trending__button {
   margin-top: 47px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 30px;
+  text-align: center;
+  display: block;
 }
 
 .trending__button-element{
