--- a/src/scss/mixins/any_mixins.scss
+++ b/src/scss/mixins/any_mixins.scss
@@ -11,7 +11,6 @@
   position: absolute;
   width: 113px;
   height: 3px;
-  top: -32px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -32,4 +31,13 @@
     background-color: transparent;
     margin: 0 1px;
   }
+}
+
+@mixin trending-text {
+  font-size: 18px;
+  font-family: "Lato";
+  color: rgb(119, 119, 119);
+  line-height: 1.389;
+  letter-spacing: 0.1em;
+  margin: 0;
 }
