--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,7 +7,7 @@ $font-main: "Open Sans", "Arial", sans-serif;
 $font-second: "Lato";
 $font-third: "Bebas Neue";
 
-$mobile: 320px;
-$desctop: 1120px;
-
+$mobile: 767px;
+$tablet: 1024px;
+$desktop: 1120px;
 
