--- a/src/_blocks/promo_slider/promo_slider.scss
+++ b/src/_blocks/promo_slider/promo_slider.scss
@@ -1,6 +1,6 @@
 .promo-slider {
   height: 100vh;
-  background: url(/img/promo_slider/main_slider.png) no-repeat center;
+  background: url(/img/promo_slider/main_slider.png) no-repeat center top;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -67,3 +67,58 @@
   @include slider-button;
   margin: 0 3px;
 }
+
+@media (max-width: $tablet) {
+  .promo-slider {
+    background: url(/img/promo_slider/main_slider_tablet.png) no-repeat center top;
+    height: 480px;
+
+    &__title {
+      font-size: 20px;
+    }
+
+    &__title-discount {
+      font-size: 35px;
+    }
+
+    &__title-tagline {
+      font-size: 18px;
+    }
+
+    &__title-shop {
+      min-width: 160px;
+      font-size: 13px;
+      padding: 14px 0;
+    }
+  }
+}
+
+@media (max-width: $mobile) {
+  .promo-slider {
+    background: url(/img/promo_slider/main_slider_mobile.png) no-repeat center top;
+    background-size: cover;
+    height: 372px;
+
+    &__title {
+      font-size: 16px;
+      margin: 0;
+    }
+
+    &__title-discount {
+      font-size: 30px;
+      margin: 0;
+    }
+
+    &__title-tagline {
+      font-size: 14px;
+      margin: 0;
+    }
+
+    &__title-shop {
+      min-width: 120px;
+      font-size: 12px;
+      padding: 10px 0;
+    }
+  }
+}
+
