--- a/src/_blocks/products/products.scss
+++ b/src/_blocks/products/products.scss
@@ -225,4 +225,33 @@
     font-size: 25px;
     padding: 15px 0;
   }
+
+  .products__list-type {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .products__list-item {
+    width: 400px;
+      + .products__list-item {
+        margin-left: 0;
+        margin-top: 20px;
+      }
+  }
+
+  .products__list-info {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .products__list-sentence {
+    width: 400px;
+    &--off {
+      margin-right: 0;
+    }
+
+    &--sale {
+      margin-top: 20px;
+    }
+  }
 }
