--- a/src/_blocks/trending/trending.scss
+++ b/src/_blocks/trending/trending.scss
@@ -40,12 +40,24 @@
   display: flex;
   margin-top: 62px;
 
+  &__second {
+    display: none;
+  }
+
+  &__third {
+    display: none;
+  }
+
+  &__fourth {
+    display: none;
+  }
+
   &__foto {
-    width: 50%;
+    width: 570px;
   }
 
   &__block-info {
-    width: 50%;
+    width: 570px;
   }
 }
 
@@ -170,4 +182,83 @@
   }
 }
 
+@media (max-width: $tablet) {
+  .trending__wrapper {
+    padding: 0 20px;
+  }
 
+  .trending-slider {
+    flex-direction: column;
+    align-items: center;
+
+    &__info-title {
+      font-size: 25px;
+    }
+
+    &__block-info {
+      margin-left: 0;
+      text-align: center;
+    }
+
+    &__info-collection::after {
+      left: 50%;
+      transform: translateX(-50%);
+      width: 50%;
+    }
+
+    &__button {
+      margin: 0;
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+    }
+
+    &__button-action {
+      margin-bottom: 20px;
+    }
+  }
+
+  .trending__title {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: $mobile) {
+  .trending-slider {
+
+    &__foto {
+      width: 100%;
+      text-align: center;
+
+        & img {
+          width: 100%;
+          height: auto;
+        }
+    }
+
+    &__block-info {
+      width: 100%;
+    }
+
+    &__info-title {
+      font-size: 20px;
+    }
+
+    &__info-collection {
+      font-size: 13px;
+    }
+
+    &__info-description {
+      font-size: 13px;
+    }
+
+    &__info-advice {
+      font-size: 13px;
+    }
+  }
+
+  .trending__title {
+    font-size: 25px;
+    padding: 15px 0;
+  }
+}
