--- a/src/_blocks/blog/blog.scss
+++ b/src/_blocks/blog/blog.scss
@@ -1,11 +1,7 @@
 .blog {
   @include wrap;
   margin-top: 57px;
-  position: relative;
   margin-bottom: 61px;
-}
-
-.blog-slider {
   position: relative;
 }
 
@@ -29,24 +25,27 @@
   }
 }
 
-.blog-slider__button {
-  position: absolute;
-  padding: 0;
-  border: none;
-  background: 0 0;
-  outline: none;
-  cursor: pointer;
-  bottom: 50%;
-  transform: translateY(-50%);
+.blog-slider {
+  position: relative;
 
-}
+  &__button-item {
+    position: absolute;
+    background: 0 0;
+    border: none;
+    cursor: pointer;
+  }
 
-.blog-slider__button-left {
-  left: -130px;
-}
+  &__button-left {
+    left: -100px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 
-.blog-slider__button-right {
-  right: -130px;
+  &__button-right {
+    right: -100px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
 }
 //................................................................
 
@@ -57,6 +56,10 @@
 
 .blog-slider__item {
   width: 50%;
+    & img {
+      width: 100%;
+      height: auto;
+    }
 }
 
 .blog-slider__item-first {
@@ -93,7 +96,7 @@ padding: 31px 0;
     position: absolute;
     content: "";
     background-color: rgb(236, 240, 241);
-    width: 570px;
+    width: 100%;
     height: 1px;
     top: 0;
     left: 0;
@@ -103,7 +106,7 @@ padding: 31px 0;
     position: absolute;
     content: "";
     background-color: rgb(236, 240, 241);
-    width: 570px;
+    width: 100%;
     height: 1px;
     bottom: 0;
     left: 0;
@@ -139,3 +142,67 @@ padding: 31px 0;
   }
 }
 
+@media (max-width: $tablet) {
+  .blog {
+    padding: 0 20px;
+  }
+
+  .blog__title {
+    font-size: 30px;
+  }
+
+  .blog-slider__button {
+    display: none;
+  }
+
+  .blog-slider__item-first {
+    display: none;
+  }
+
+  .blog-slider {
+    justify-content: center;
+
+    &__item {
+      width: 100%;
+      text-align: center;
+    }
+  }
+
+  .blog-slider__item {
+    width: 550px;
+  }
+}
+
+@media (max-width: $mobile) {
+  .blog__title {
+    font-size: 25px;
+    padding: 15px 0;
+  }
+
+  .blog-slider__item-title {
+    font-size: 20px;
+  }
+
+  .blog-slider__item-text {
+    font-size: 14px;
+
+    // &::before {
+    //   width: 100%;
+    // }
+
+    // &::after {
+    //   width: 100%;
+    // }
+  }
+
+  .blog-slider__item-button {
+    margin-top: 20px;
+
+    & a {
+      font-size: 12px;
+      min-width: 120px;
+      padding: 10px 0;
+    }
+  }
+
+}
