адаптив blog, но я так и не понял, как поступить с стрелками слайдера.

--- a/src/_blocks/subscribe/subscribe.scss
+++ b/src/_blocks/subscribe/subscribe.scss
@@ -1,6 +1,6 @@
 .subscribe {
   font-family: "Open Sans";
-  background: url(../../img/subscribe/subscribe.jpg) no-repeat top;
+  background: url(/img/subscribe/subscribe.jpg) no-repeat top;
   background-size: cover;
   position: relative;
   padding: 71px 0 80px 0;
