--- a/src/_blocks/blog/blog.scss
+++ b/src/_blocks/blog/blog.scss
@@ -5,6 +5,38 @@
   position: relative;
 }
 
+.blog-slider__button-item {
+  position: absolute;
+  border: 0;
+  background-color: transparent;
+  outline: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.blog-slider__button-left {
+  position: absolute;
+  left: 0;
+  top:37%;
+  background-image: url(/img/blog/left_arrow.svg);
+  width: 28px;
+  height: 49px;
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+.blog-slider__button-right {
+  right: 0;
+  top:37%;
+  background-image: url(/img/blog/right_arrow.svg);
+  width: 28px;
+  height: 49px;
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
 .blog__title {
   @include opensans;
   font-weight: 300;
@@ -25,28 +57,6 @@
   }
 }
 
-.blog-slider {
-  position: relative;
-
-  &__button-item {
-    position: absolute;
-    background: 0 0;
-    border: none;
-    cursor: pointer;
-  }
-
-  &__button-left {
-    left: -100px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
-  &__button-right {
-    right: -100px;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-}
 //................................................................
 
 .blog-slider {
@@ -56,10 +66,10 @@
 
 .blog-slider__item {
   width: 50%;
-    & img {
-      width: 100%;
-      height: auto;
-    }
+  & img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .blog-slider__item-first {
@@ -72,7 +82,7 @@
   color: $red;
   font-weight: 700;
   line-height: 1;
-  margin:22px 0 0;
+  margin: 22px 0 0;
 }
 
 .blog-slider__item-subtitle {
@@ -84,13 +94,13 @@
 }
 
 .blog-slider__item-text {
-font-family: "Open Sans";
-font-size: 18px;
-color: rgba(51, 51, 51, 0.6);
-line-height: 1.333;
-position: relative;
-margin: 21px 0 0;
-padding: 31px 0;
+  font-family: "Open Sans";
+  font-size: 18px;
+  color: rgba(51, 51, 51, 0.6);
+  line-height: 1.333;
+  position: relative;
+  margin: 21px 0 0;
+  padding: 31px 0;
 
   &:before {
     position: absolute;
@@ -204,5 +214,4 @@ padding: 31px 0;
       padding: 10px 0;
     }
   }
-
 }
