--- a/src/_blocks/promo_slider/promo_slider.scss
+++ b/src/_blocks/promo_slider/promo_slider.scss
@@ -5,18 +5,18 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+}
 
-  &__title-second {
+.promo-slider__title-second {
+  display: none;
+}
+
+.promo-slider__title-third {
     display: none;
   }
-  
-  &__title-third {
-      display: none;
-    }
 
-  &__title-fourth {
-    display: none;
-  }
+.promo-slider__title-fourth {
+  display: none;
 }
 
 .promo-slider__title-wrapper {
@@ -87,24 +87,24 @@
   .promo-slider {
     background: url(/img/promo_slider/main_slider_tablet.png) no-repeat center top;
     height: 480px;
+  }
 
-    &__title {
-      font-size: 20px;
-    }
+  .promo-slider__title {
+    font-size: 20px;
+  }
 
-    &__title-discount {
-      font-size: 35px;
-    }
+  .promo-slider__title-discount {
+    font-size: 35px;
+  }
 
-    &__title-tagline {
-      font-size: 18px;
-    }
+  .promo-slider__title-tagline {
+    font-size: 18px;
+  }
 
-    &__title-shop {
-      min-width: 160px;
-      font-size: 13px;
-      padding: 14px 0;
-    }
+  .promo-slider__title-shop {
+    min-width: 160px;
+    font-size: 13px;
+    padding: 14px 0;
   }
 }
 
@@ -113,31 +113,31 @@
     background: url(/img/promo_slider/main_slider_mobile.png) no-repeat center top;
     background-size: cover;
     height: 372px;
+  }
 
-    &__title-wrapper {
-      padding: 0 20%;
-    }
+  .promo-slider__title-wrapper {
+    padding: 0 20%;
+  }
 
-    &__title {
-      font-size: 16px;
-      margin-bottom: 20px;
-    }
+  .promo-slider__title {
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
 
-    &__title-discount {
-      font-size: 30px;
-      margin-bottom: 20px;
-    }
+  .promo-slider__title-discount {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
 
-    &__title-tagline {
-      font-size: 14px;
-      margin-bottom: 20px;
-    }
+  .promo-slider__title-tagline {
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
 
-    &__title-shop {
-      min-width: 120px;
-      font-size: 12px;
-      padding: 10px 0;
-    }
+  .promo-slider__title-shop {
+    min-width: 120px;
+    font-size: 12px;
+    padding: 10px 0;
   }
 }
 
