--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
+@import "../_blocks/slick/slick.scss";
+@import "../_blocks/slick/slick-theme.scss";
 @import "variables.scss";
 
 @import "mixins/mediaquery.scss";
