--- a/src/_blocks/trending/trending.scss
+++ b/src/_blocks/trending/trending.scss
@@ -4,7 +4,6 @@
   background-size: cover;
 }
 
-//................................................................
 
 .trending__wrapper {
   @include wrap;
@@ -30,7 +29,6 @@
   }
 }
 
-//................................................................
 
 .trending-slider__block-info {
   margin-left: 19px;
@@ -110,8 +108,6 @@
   letter-spacing: 0.09em;
 }
 
-//................................................................
-
 .trending-slider__button {
   margin-left: 11px;
   margin-top: 87px;
@@ -166,23 +162,47 @@
   margin-top: 30px;
 }
 
-//................................................................
-.trending__button {
-  margin-top: 60px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+//*************************************************
+.trending__dots {
+  position: absolute;
+  bottom: -60px;
+  display: block;
+  width: 100%;
+  padding: 0;
+  list-style: none;
+  text-align: center;
 }
 
-.trending__button-element{
-  @include slider-button;
-  background-color: $dark;
-
-  &:active {
-    border: 2px solid $red;
-    margin: 0 5px;
-  }
+.trending__dots li {
+  position: relative;
+  display: inline-block;
+  margin: 0 5px;
+  padding: 0;
+  cursor: pointer;
 }
+
+.trending__dots li button {
+  font-size: 0;
+  line-height: 0;
+  display: block;
+  width: 12px;
+  height: 12px;
+  padding: 0;
+  border-radius: 50%;
+  background-color: #878787;
+  border: none;
+  margin: 0 5px;
+  outline: none;
+}
+
+.trending__dots li.slick-active button {
+  border: 2px solid $red;
+  background-color: transparent;
+  margin: 0 5px;
+}
+
+
+//-------------------------------------------------
 
 @media (max-width: $tablet) {
   .trending__wrapper {
@@ -260,5 +280,11 @@
   .trending__title {
     font-size: 25px;
     padding: 15px 0;
+  }
+}
+
+@media (max-width: 415px) {
+  .trending-slider__button-wrapper {
+    width: 200px;
   }
 }
