--- a/src/_blocks/blog/blog.scss
+++ b/src/_blocks/blog/blog.scss
@@ -30,6 +30,12 @@
 .blog-slider {
   display: flex;
   margin-top: 68px;
+  position: relative;
+}
+
+.blog-slider__item {
+  display: flex;
+  align-items: center;
 }
 
 .blog-slider__item-title {
@@ -39,6 +45,7 @@
   font-weight: 700;
   line-height: 1;
   margin: 22px 0 0;
+  align-self: flex-start;
 }
 
 .blog-slider__item-subtitle {
@@ -47,6 +54,7 @@
   color: rgba(51, 51, 51, 0.8);
   line-height: 1.875;
   margin: 17px 0 0;
+  align-self: flex-start;
 }
 
 .blog-slider__item-text {
@@ -57,6 +65,8 @@
   position: relative;
   margin: 21px 0 0;
   padding: 31px 0;
+  width: 570px;
+  max-height: 150px;
 
   &:before {
     position: absolute;
@@ -108,6 +118,57 @@
   }
 }
 
+.blog-slider__item {
+  display: flex;
+  flex-direction: column;
+}
+
+.blog-arrow__left,
+.blog-arrow__right {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+  position: absolute;
+  bottom: 50%;
+  transform: translateY(-50%);
+    &:hover {
+      opacity: 0.8;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+}
+
+.blog-arrow__left {
+  left: -60px;
+}
+
+.blog-arrow__right {
+  right: -60px;
+}
+
+@media (max-width: 1280px) {
+  .blog-arrow__left {
+    left: 100px;
+    z-index: 1;
+  }
+
+  .blog-arrow__right {
+    right: 100px;
+    z-index: 1;
+  }
+
+  .blog-slider__item-title {
+    align-self: center;
+  }
+
+  .blog-slider__item-subtitle {
+    align-self: center;
+  }
+}
+
 @media (max-width: $tablet) {
 
   .blog {
@@ -138,6 +199,8 @@
     padding: 15px 0;
   }
 
+
+
   .blog-slider__item-title {
     font-size: 20px;
   }
@@ -154,5 +217,13 @@
       min-width: 120px;
       padding: 10px 0;
     }
+  }
+
+  .blog-arrow__left {
+    bottom: -40px;
+  }
+
+  .blog-arrow__right {
+    bottom: -40px;
   }
 }
