Изменения в блоке promo-slider

--- a/src/_blocks/blog/blog.scss
+++ b/src/_blocks/blog/blog.scss
@@ -199,14 +199,14 @@
     padding: 15px 0;
   }
 
-
-
   .blog-slider__item-title {
     font-size: 20px;
   }
 
   .blog-slider__item-text {
     font-size: 14px;
+    width: 100%;
+    height: auto;
   }
 
   .blog-slider__item-button {
