правит ресайз первого слайдера

--- a/src/_blocks/promo_slider/promo_slider.scss
+++ b/src/_blocks/promo_slider/promo_slider.scss
@@ -10,13 +10,12 @@
 
 .promo-slider__image img {
   height: 100vh;
-  width: 100vw;
+  left: 50%;
+  max-height: 150%;
+  max-width: 177%;
   position: absolute;
   top: 50%;
-  left: 50%;
   transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
 }
 
 
@@ -130,7 +129,7 @@
 @media (max-width: $tablet) {
 
   .promo-slider__wrapper {
-    height: 480px;
+    height: 500px;
   }
 
   .promo-slider__title {
