--- a/src/_blocks/promo_slider/promo_slider.scss
+++ b/src/_blocks/promo_slider/promo_slider.scss
@@ -8,15 +8,12 @@
   overflow: hidden;
 }
 
-.promo-slider__image img {
-  height: 100vh;
-  width: 100%;
-  left: 50%;
-  max-height: 150%;
-  max-width: 177%;
+.promo-slider__image-item {
   position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  object-fit: cover;
+  font-family: 'object-fit: contain;';
+  height: 100%;
+  width: 100%;
 }
 
 
